# convertisseur-csv-vcf-V1-V2

./: .gitignore  GUIDE_GIT.md  pyproject.toml
V1_2/: README.md  main.py  utils.py
V2/: DEVBOOK.md  README.md  app.py  app_archive_2.0.1.py  requirements.txt
data/: contacts Le Grand Carnage.csv  dossier csv pour papa (liste artistique QLMNR).csv  dossier csv pour papa (liste technique QLMNR).csv  dossier csv pour papa (liste technique QLMNR)_config.json  toto.csv
