[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convertisseur_csv_vers_vcf_streamlit"
version = "2.0.9"
description = "Convertisseur de fichiers CSV en format VCF (carnet d'adresses) avec interface Streamlit"
readme = "README.md"
authors = [
    {name = "Michel Safars"}
]
license = {text = "Propriétaire"}
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "coverage>=7.0.0",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.flake8]
max-line-length = 120
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.pytest]
testpaths = ["tests"]

[tool.setuptools]
packages = ["src"]

[tool.windsurf]
mode = "Cascade Base"
